--- a/src/CreateTodoButton/CreateTodoButton.css
+++ b/src/CreateTodoButton/CreateTodoButton.css
@@ -1,10 +1,4 @@
 .createTodoButton {
-  background-color: #61dafa;
-  box-shadow: 0px 5px 25px rgba(97, 218, 250, 0.5);
-  border: none;
-  border-radius: 50%;
-  cursor: pointer;
-  font-size: 50px;
   position: fixed;
   bottom: 24px;
   right: 24px;
@@ -15,10 +9,24 @@
   align-items: center;
   height: 64px;
   width: 64px;
-  transform: rotate(0);
-  transition: 0.3s ease;
-  z-index: 1;
+  background-color: #6a0dad;
+  color: #f8f8f8;
+  border: none;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  font-size: 24px;
+  font-weight: bold;
+  box-shadow: 0px 4px 6px #2d2d2d;
+  cursor: pointer;
+  transition: transform 0.2s, box-shadow 0.2s;
 }
 .createTodoButton:hover {
-  transform: rotate(224deg);
+  background-color: #d8b4f0;
+  box-shadow: 0px 6px 8px #1a1a1a;
+}
+
+.createTodoButton:active {
+  transform: scale(0.95);
+  box-shadow: 0px 2px 4px #2d2d2d;
 }
